<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerInParent="true"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:background="@android:color/transparent"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/error_view_icon"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/error"
        android:contentDescription="@string/image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/error_view_title"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/error_view_text"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/error_view_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        tools:text="@string/lorem_ipsum_3"/>

    <Button
        android:id="@+id/error_view_retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/dark_grey"
        android:minHeight="1dp"
        android:minWidth="1dp"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:text="@string/retry"/>

</LinearLayout>
