<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context="com.alexbarcelo.tvinities.activities.DetailActivity">

    <ScrollView
        android:id="@+id/activity_detail_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/activity_detail_backdrop_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image"
                    android:src="@drawable/no_backdrop_found"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/activity_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_alignBottom="@id/activity_detail_backdrop_image"
                    android:background="#99000000"
                    android:fontFamily="@font/raleway_semi_bold"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    tools:text="@string/lorem_ipsum_1"
                    android:textAlignment="gravity"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="36sp"
                    app:autoSizeMinTextSize="20sp"
                    app:autoSizeTextType="uniform"/>

                <TextView
                    android:id="@+id/activity_detail_rating"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/activity_detail_backdrop_image"
                    android:layout_marginEnd="7dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/ostrich_sans_heavy_bold"
                    android:gravity="center|center_vertical"
                    tools:text="8.9"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="38sp"/>

                <TextView
                    android:id="@+id/activity_detail_year_and_seasons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@id/activity_detail_rating"
                    android:layout_marginStart="5dp"
                    android:layout_toStartOf="@id/activity_detail_rating"
                    android:gravity="start|center_vertical"
                    tools:text="@string/lorem_ipsum_2"
                    android:textAlignment="gravity"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/activity_detail_genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/activity_detail_year_and_seasons"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toStartOf="@id/activity_detail_rating"
                    android:gravity="start|center_vertical"
                    tools:text="@string/lorem_ipsum_2"
                    android:textAlignment="gravity"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="italic"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/raleway_semi_bold"
                android:gravity="start|center_vertical"
                android:text="@string/overview"
                android:textAlignment="gravity"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/activity_detail_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:gravity="start|center_vertical"
                tools:text="@string/lorem_ipsum_3"
                android:textAlignment="gravity"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/raleway_semi_bold"
                android:gravity="start|center_vertical"
                android:text="@string/similar_shows"
                android:textAlignment="gravity"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="5dp"
                android:background="@color/light_grey"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/activity_detail_similar_shows_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:orientation="horizontal">

                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/activity_detail_error_view"
        layout="@layout/error_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/activity_detail_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>
